[JENKINS-53535] Make Bitbucket Server, Owner and repository environment variables for Bitbucket Team/Project based jobs (#949)
Add as environment variables some bitbucket useful informations like:
- repository name (slug);
- owner name (slug);
- project key;
- the server URL.